--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -7,7 +7,7 @@
   "header": {
     "planet": "'Big Blue'",
     "year": "5017u",
-    "system": "Ardennes",
+    "system": "Heiligtum",
     "gate": "Rào Cỏ",
     "ring": "Annamite",
     "headerTitle": "Mirrorsmoke",
