--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -5,7 +5,7 @@
   "defaultTitle": "MSMC |",
   "icon": "/faction-logos/msmc.svg",
   "header": {
-    "planet": "'Big Blue'",
+    "planet": "Heiligtum-6 'Deep Blue'",
     "year": "5017u",
     "system": "Heiligtum",
     "gate": "Rào Cỏ",
