--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"@vitejs/plugin-vue": "^3.0.3",
 		"prettier": "2.7.1",
 		"vite": "^3.0.9",
-		"vite-plugin-compression": "^0.5.1"
+		"vite-plugin-compression": "^0.5.1",
+		"vite-plugin-vue-devtools": "^7.7.6"
 	},
 	"optionalDependencies": {
 		"esbuild-linux-64": "^0.15.5"
